--- a/Hogwarts/src/app/person-list/person-list.component.html
+++ b/Hogwarts/src/app/person-list/person-list.component.html
@@ -1,4 +1,5 @@
 <div class="hogwarts">
+  <div class="title">
   <h1>Hogwarts</h1>
   <div class="container">
     <div class="teachers">
@@ -27,4 +28,5 @@
       </div>
     </div>
   </div>
+</div>
 </div>
